--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PhoneStyle - Система учёта продаж для семейного бутика</title>
+    <title>Ipochino - Система учёта продаж для семейного бутика</title>
     <meta name="description" content="Современная система учёта продаж аксессуаров для телефонов. Простой интерфейс для ежедневного ввода данных и аналитики." />
     <meta name="author" content="PhoneStyle Family Boutique" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
